[package]
name = "opentelemetry-zenoh-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh = "0.5.0-beta.9"
async-std = { version = "=1.9.0", default-features = false, features = [
    "attributes",
    "unstable",
] }
futures = "0.3.12"
clap = "2.33.3"
opentelemetry = { version = "0.16.0", features = ["rt-async-std"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-async-std", "reqwest_collector_client"] }
opentelemetry-semantic-conventions = "0.8.0"
serde_json = "1.0.72"
serde = "1.0.131"
rand = "0.8.4"
